kube-gitops/k3s/forgejo/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forgejo.k3s.kecskemethy.org`)
      kind: Rule
      services:
        - name: forgejo
          port: 3000
  tls: {}
